# ssb-datadoc-model

./: .gitignore  CODEOWNERS  README.md  SECURITY.md  backstage.yaml  pyproject.toml
.github/: dependabot.yml  labels.yml  release-drafter-java.yml  release-drafter-python.yml  release-drafter.yml
.github/workflows/: build-java.yml  generate-java.yml  generate-python.yml  labeler.yml  publish.yml  release-drafter.yml  release-java.yml  release-python.yml  test-python.yml
datadoc-json-schema/: datadoc-json-schema.json  person-data-example_p2023-01-01_v1__DOC.json
datadoc-json-schema/no/: temporalityType.json
datadoc-json-schema/type/: languageStringType.json  tagType.json
datadoc_json_schema/: datadoc_json_schema.json
datadoc_model/: BaseModel.py  Enums.py  LanguageStrings.py  LanguageStringsEnum.py  Model.py
src/: metadata-container-json-schema.json
src/datadoc/: datadoc-json-schema.json  languageStringType.json  temporalityTypeType.json
src/datadoc-json-schema/: datadoc-json-schema.json
src/datadoc-json-schema/no/: languageStringType.json
src/datadoc/no/: unitType.json
src/pseudonymization/: pseudonymization-json-schema.json
