[tool.poetry]
name = "ssb-datadoc-model"
version = "0.1.0"
description = "Data Model for use in SSB's Metadata system"
authors = ["Bjørn Roar Joneid <bnj@ssb.no>", "Miles Winther <mmw@ssb.no>", "Jan Sander <jhs@ssb.no>"]
license = "Apache 2.0"

packages = [
    { include = "datadoc_model" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
