[tool.poetry]
name = "ssb-datadoc-model"
version = "1.0.0"
description = "Data Model for use in Statistics Norway's Metadata system"
authors = ["Statistics Norway <mmw@ssb.no>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/statisticsnorway/ssb-datadoc-model"

packages = [
    { include = "datadoc_model" },
]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = ">=1.9.1"

[tool.poetry.dev-dependencies]
black = "*"
ipython = "*"
bump2version = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
